image alignment fixed

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
               alt="human in red bean leaning against a wall"
             />
           </div>
-          <div class="col-sm pt-2 pb-2 pe-sm-5">
+          <div class="col-sm pt-2 pb-2 pe-sm-5 ps-sm-5">
             <div class="container-sm">
               <h6 class="h6 text-muted fw-light">April 1 &bull; 3 mins</h6>
             </div>
@@ -281,7 +281,7 @@
               alt="human in red bean scrolling through a phone"
             />
           </div>
-          <div class="col-sm pt-2 pb-2 pe-sm-5">
+          <div class="col-sm pt-2 pb-2 pe-sm-5 ps-sm-5">
             <div class="container-sm">
               <h6 class="h6 text-muted fw-light">February 1 &bull; 3 mins</h6>
             </div>
