html pages added for nav items

--- a/blogPosts.html
+++ b/blogPosts.html
@@ -43,19 +43,19 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto fs-5">
-              <li class="nav-item mx-sm-5">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-              </li>
-              <li class="nav-item mx-sm-5">
-                <a class="nav-link" href="blogPosts.html">Blog</a>
-              </li>
-              <li class="nav-item mx-sm-5">
-                <a class="nav-link" href="about.html">About</a>
-              </li>
-              <li class="nav-item mx-sm-5">
-                <a class="nav-link" href="join.html">Join</a>
-              </li>
-            </ul>
+                <li class="nav-item mx-sm-5">
+                  <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                </li>
+                <li class="nav-item mx-sm-5">
+                  <a class="nav-link active" href="blogPosts.html">Blog</a>
+                </li>
+                <li class="nav-item mx-sm-5">
+                  <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item mx-sm-5">
+                  <a class="nav-link" href="join.html">Join</a>
+                </li>
+              </ul>
             <form class="d-flex" role="search">
               <input
                 class="form-control me-2"
@@ -70,51 +70,12 @@
           </div>
         </div>
       </nav>
-      <!-- INTRODUCTION PART -->
-      <div class="container-sm-fluid">
-        <div class="row">
-          <div class="col-sm" style="padding: 0">
-            <img
-              src="images/image-1.jpg"
-              class="img-fluid"
-              alt="Woman lying on green grass with eyes closed"
-            />
-          </div>
-          <div class="col-sm mt-sm-auto mb-sm-auto">
-            <br />
-            <div>
-              <div class="container">
-                <h2 class="h2 text-sm-center px-sm-5 display-4">My Thoughts</h2>
-                <br>
-              </div>
-            </div>
-            <div class="card mx-sm-auto px-sm-5 border border-0">
-              <img
-                src="images/image-2.jpg"
-                class="card-img-top img-fluid"
-                alt="flowers in the sunlight"
-              />
-              <div class="card-body text-sm-center">
-                <h5 class="card-title">Detoxing my social media feed</h5>
-                <p class="card-text">
-                  Create a blog post subtitle that summarizes your post in a few
-                  short punchy sentences and entices your audience to continue
-                  reading...
-                </p>
-                <a href="#" class="btn btn-outline-success">All Posts</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
       <!-- RECENT POSTS -->
-      <br />
-      <br />
       <!-- <hr> -->
       <div class="container-sm text-left Blog" id="Blog">
         <div class="row mt-sm-5 mb-sm-5">
           <div class="col-sm">
-            <h2 class="h2 display-4" >Recent Posts</h2>
+            <h2 class="h2 display-4 text-center" >All Posts</h2>
           </div>
         </div>
         <div class="row align-items-center">
@@ -130,7 +91,7 @@
               <h6 class="h6 text-muted fw-light">May 1 &bull; 2 mins</h6>
             </div>
             <div class="container-sm pt-4">
-              <a href="/blogPosts-5.html" class="text-decoration-none" target="_blank"">
+              <a href="blogPosts-7.html" class="text-decoration-none" target="_blank"">
                 <h3 class="fw-normal fs-1">
                   The one thing I would tell to my 16 year old self
                 </h3>
@@ -172,7 +133,7 @@
               <h6 class="h6 text-muted fw-light">May 1 &bull; 5 mins</h6>
             </div>
             <div class="container-sm pt-4">
-              <a href="/blogPosts-4.html" class="text-decoration-none" target="_blank"">
+              <a href="blogPosts-6.html" class="text-decoration-none" target="_blank"">
                 <h3 class="fw-normal fs-1">
                   Can't stop scrolling through my friends' feed?
                 </h3>
@@ -214,7 +175,7 @@
               <h6 class="h6 text-muted fw-light">April 1 &bull; 3 mins</h6>
             </div>
             <div class="container-sm pt-4">
-              <a href="/blogPosts-3.html" class="text-decoration-none" target="_blank">
+              <a href="blogPosts-5.html" class="text-decoration-none" target="_blank">
                 <h3 class="fw-normal fs-1">
                   How I stopped being afraid of being weak
                 </h3>
@@ -256,7 +217,7 @@
               <h6 class="h6 text-muted fw-light">February 1 &bull; 2 mins</h6>
             </div>
             <div class="container-sm pt-4">
-              <a href="/blogPosts-2.html" class="text-decoration-none" target="_blank">
+              <a href="blogPosts-4.html" class="text-decoration-none" target="_blank">
                 <h3 class="fw-normal fs-1">
                   Five great side effects of running with music
                 </h3>
@@ -298,7 +259,7 @@
               <h6 class="h6 text-muted fw-light">February 1 &bull; 3 mins</h6>
             </div>
             <div class="container-sm pt-4">
-              <a href="/blogPosts-1.html" class="text-decoration-none" target="_blank">
+              <a href="blogPosts-3.html" class="text-decoration-none" target="_blank">
                 <h3 class="fw-normal fs-1">
                   Five things that would make you sleep better at night
                 </h3>
@@ -327,203 +288,89 @@
             </div>
           </div>
         </div>
-      </div>
-      <!-- QUOTE BLOCK -->
-      <div class="container-sm-fluid">
-        <div class="d-flex flex-sm-row-reverse flex-wrap align-items-center">
-          <div class="col-sm" style="padding: 0">
-            <img
-              src="images/image-8.jpg"
-              class="img-fluid w-100"
-              alt="winnie-the-pooh"
-            />
-          </div>
-          <div class="col-sm">
-            <div class="container ms-sm-0 ps-sm-5">
-              <figure class="text-center">
-                <blockquote class="blockquote">
-                  <p class="display-1">
-                    "I always get to where I'm going by walking away from where
-                    I have been"
-                  </p>
-                </blockquote>
-                <figcaption class="blockquote-footer">
-                  Winnie the Pooh <cite title="Source Title">A.A. Milne</cite>
-                </figcaption>
-              </figure>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- AbOUT -->
-      <div class="container-sm-fluid" id="About">
-        <div class="d-flex flex-sm-row flex-wrap align-items-center">
-          <div class="col-sm" style="padding: 0%">
-            <img
-              src="images/image-9.jpg"
-              class="img-fluid w-100"
-              alt="woman sitting on a staircase holding a cup"
-            />
-          </div>
-          <div class="col-sm">
-            <div class="container mx-sm-5 px-sm-5">
-              <figure class="text-left">
-                <div class="d-flex flex-column justify-content-sm-around">
-                  <h2
-                    class="display-1 pe-sm-5 me-sm-5 pt-sm-5 mt-sm-5 pb-sm-2 mb-sm-2"
-                  >
-                    Hi, I'm Dena
-                  </h2>
-                  <h3
-                    class="fs-3 fw-light pe-sm-5 me-sm-5 pt-sm-2 mt-sm-2 pb-sm-2 mb-sm-2"
-                  >
-                    A mental health blogger. Passionate about sharing thoughts
-                    and information on everything that makes my days better.
-                  </h3>
-                  <h4
-                    class="fs-5 fw-lighter pe-sm-5 me-sm-5 pt-sm-2 mt-sm-2 pb-sm-2 mb-sm-2"
-                  >
-                    I'm a paragraph. Click here to add your own text and edit
-                    me. It is easy. Just click “Edit Text” or double click me to
-                    add your own content and make changes to the font. Feel free
-                    to drag and drop me anywhere you like on your page. I’m a
-                    great place for you to tell a story and let your users know
-                    a little more about you.​
-                  </h4>
-                </div>
-                <div>
-                  <a href="#" class="btn btn-outline-success">Read more</a>
-                </div>
-              </figure>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- IMAGES -->
-      <div class="container-sm-fluid pt-sm-5 mt-sm-5">
-        <div class="row">
-          <div class="col-sm">
-            <h2 class="display-2 text-center">SMILE, ALWAYS!</h2>
-          </div>
-        </div>
-        <div class="container-sm pt-sm-5 mt-sm-5">
-          <div class="row">
-            <div class="col-sm">
+        <div class="row mt-sm-5 mb-sm-5 align-items-center">
+            <div class="col-sm border border-2" style="padding: 0">
               <img
-                src="images/smile-1.jpg"
-                class="img-fluid"
-                alt="woman sitting on a staircase holding a cup"
-              />
-            </div>
-            <div class="col-sm pb-sm-5">
-              <img
-                src="images/smile-2.jpg"
+                src="images/image-11.jpg"
                 class="img-fluid w-100"
-                alt="woman sitting on a staircase holding a cup"
+                alt="human in red bean scrolling through a phone"
               />
             </div>
-            <div class="col-sm">
-              <img
-                src="images/smile-3.jpg"
-                class="img-fluid"
-                alt="woman sitting on a staircase holding a cup"
-              />
-            </div>
-            <div class="col-sm">
-              <img
-                src="images/smile-4.jpg"
-                class="img-fluid"
-                alt="woman sitting on a staircase holding a cup"
-              />
-            </div>
-            <div class="col-sm">
-              <img
-                src="images/smile-5.jpg"
-                class="img-fluid"
-                alt="woman sitting on a staircase holding a cup"
-              />
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm">
-              <img
-                src="images/smile-6.jpg"
-                class="img-fluid"
-                alt="woman sitting on a staircase holding a cup"
-              />
-            </div>
-            <div class="col-sm">
-              <img
-                src="images/smile-7.jpg"
-                class="img-fluid"
-                alt="woman sitting on a staircase holding a cup"
-              />
-            </div>
-            <div class="col-sm">
-              <img
-                src="images/smile-8.jpg"
-                class="img-fluid"
-                alt="woman sitting on a staircase holding a cup"
-              />
-            </div>
-            <div class="col-sm">
-              <img
-                src="images/smile-9.jpg"
-                class="img-fluid"
-                alt="woman sitting on a staircase holding a cup"
-              />
-            </div>
-            <div class="col-sm">
-              <img
-                src="images/smile-10.jpg"
-                class="img-fluid"
-                alt="woman sitting on a staircase holding a cup"
-              />
+            <div class="col-sm pt-2 pb-2 pe-sm-5 ps-sm-5">
+              <div class="container-sm">
+                <h6 class="h6 text-muted fw-light">January 15 &bull; 4 mins</h6>
+              </div>
+              <div class="container-sm pt-4">
+                <a href="blogPosts-2.html" class="text-decoration-none" target="_blank">
+                  <h3 class="fw-normal fs-1">Anxiety attacks at workplace: do's and don'ts</h3>
+                </a>
+              </div>
+              <div class="container-sm pt-4">
+                <h5 class="fw-light fs-6">
+                  Create a blog post subtitle that summarizes your post in a few
+                  short, punchy sentences and entices your audience to continue
+                  reading...
+                </h5>
+              </div>
+              <div>
+                <br />
+                <br />
+                <br />
+                <!-- <br> -->
+              </div>
+              <div>
+                <hr />
+              </div>
+              <div class="container-sm">
+                <h6 class="h6 text-muted fw-light">
+                  <i class="fa fa-comment" aria-hidden="true"></i> 5 Comments
+                </h6>
+              </div>
             </div>
           </div>
-        </div>
+          <div class="row mt-sm-5 mb-sm-5 align-items-center">
+            <div class="col-sm border border-2" style="padding: 0">
+              <img
+                src="images/image-10.jpg"
+                class="img-fluid w-100"
+                alt="human in red bean with eyes closed in sun rays"
+              />
+            </div>
+            <div class="col-sm pt-2 pb-2 pe-sm-5 ps-sm-5">
+              <div class="container-sm">
+                <h6 class="h6 text-muted fw-light">January 1 &bull; 3 mins</h6>
+              </div>
+              <div class="container-sm pt-4">
+                <a href="blogPosts-1.html" class="text-decoration-none" target="_blank">
+                  <h3 class="fw-normal fs-1">
+                    10 signs you are a people pleaser!
+                  </h3>
+                </a>
+              </div>
+              <div class="container-sm pt-4">
+                <h5 class="fw-light fs-6">
+                  Create a blog post subtitle that summarizes your post in a few
+                  short, punchy sentences and entices your audience to continue
+                  reading...
+                </h5>
+              </div>
+              <div>
+                <br />
+                <br />
+                <br />
+                <!-- <br> -->
+              </div>
+              <div>
+                <hr />
+              </div>
+              <div class="container-sm">
+                <h6 class="h6 text-muted fw-light">
+                  <i class="fa fa-comment" aria-hidden="true"></i> 2 Comments
+                </h6>
+              </div>
+            </div>
+          </div>
       </div>
-      <br id="Join"/>
-      <br />
-      <!-- NEWSLETTER -->
-      <div class="container-sm pt-sm-5">
-        <div class="row">
-          <div class="col-sm">
-            <h2 class="display-1 text-center">Join the Conversation!</h2>
-            <h4 class="fs-6 text-center">
-              Get the content you need, when you need it
-            </h4>
-          </div>
-        </div>
-        <br />
-        <br />
-        <form class="row g-3">
-          <div class="col-md-6">
-            <label for="inputFirstName4" class="form-label">First Name</label>
-            <input type="text" class="form-control" id="inputFirstName4" />
-          </div>
-          <div class="col-md-6">
-            <label for="inputLastName4" class="form-label">Last Name</label>
-            <input type="text" class="form-control" id="inputLastName4" />
-          </div>
-          <div class="col-12">
-            <label for="inputEmailAddress" class="form-label"
-              >Email Address</label
-            >
-            <input
-              type="email"
-              class="form-control"
-              id="inputEmailAddress"
-              placeholder="abc@example.com"
-            />
-          </div>
-          <div class="col-12 text-center">
-            <a href="#" class="btn btn-outline-success text-center">Submit</a>
-          </div>
-        </form>
-      </div>
-      <br>
-      <br>
       <!-- FOOTER -->
       <footer class="text-center text-lg-start bg-secondary text-muted text-light footer">
         <!-- Section: Social media -->
