--- a/about.html
+++ b/about.html
@@ -15,8 +15,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <!-- <link rel="stylesheet" href="/stylesheet.css"/> -->
-    <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
-
+    <link rel="stylesheet" type="text/css" href="stylesheet.css" />
   </head>
   <body class="bg-white body">
     <div class="container-sm-fluid">
@@ -24,7 +23,7 @@
       <nav
         class="navbar navbar-expand-lg bg-body-tertiary sticky-top navbar-light"
       >
-        <div class="container-sm ">
+        <div class="container-sm">
           <a class="navbar-brand" href="#"
             ><h1 class="h1 display-3">Inner Peace</h1></a
           >
@@ -43,19 +42,21 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto fs-5">
-                <li class="nav-item mx-sm-5">
-                  <a class="nav-link" aria-current="page" href="index.html">Home</a>
-                </li>
-                <li class="nav-item mx-sm-5">
-                  <a class="nav-link" href="blogPosts.html">Blog</a>
-                </li>
-                <li class="nav-item mx-sm-5">
-                  <a class="nav-link active" href="about.html">About</a>
-                </li>
-                <li class="nav-item mx-sm-5">
-                  <a class="nav-link" href="join.html">Join</a>
-                </li>
-              </ul>
+              <li class="nav-item mx-sm-5">
+                <a class="nav-link" aria-current="page" href="index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item mx-sm-5">
+                <a class="nav-link" href="blogPosts.html">Blog</a>
+              </li>
+              <li class="nav-item mx-sm-5">
+                <a class="nav-link active" href="about.html">About</a>
+              </li>
+              <li class="nav-item mx-sm-5">
+                <a class="nav-link" href="join.html">Join</a>
+              </li>
+            </ul>
             <form class="d-flex" role="search">
               <input
                 class="form-control me-2"
@@ -75,7 +76,7 @@
         <div class="d-flex flex-sm-row flex-wrap align-items-center">
           <div class="col-sm" style="padding: 0%">
             <img
-              src="images/image-9.jpg"
+              src="images/image-12.jpg"
               class="img-fluid w-100"
               alt="woman sitting on a staircase holding a cup"
             />
@@ -85,7 +86,7 @@
               <figure class="text-left">
                 <div class="d-flex flex-column justify-content-sm-around">
                   <h2
-                    class="display-1 pe-sm-5 me-sm-5 pt-sm-5 mt-sm-5 pb-sm-2 mb-sm-2"
+                    class="display-1 pe-sm-5 me-sm-5 pt-sm-5 mt-5 pb-sm-2 mb-sm-2"
                   >
                     Hi, I'm Dena
                   </h2>
@@ -105,9 +106,35 @@
                     great place for you to tell a story and let your users know
                     a little more about you.​
                   </h4>
-                </div>
-                <div>
-                  <a href="#" class="btn btn-outline-success">Read more</a>
+                  <br />
+                  <h4
+                    class="fs-5 fw-lighter pe-sm-5 me-sm-5 pt-sm-2 mt-sm-2 pb-sm-2 mb-sm-2"
+                  >
+                    This is a great space to write long text about your company
+                    and your services. You can use this space to go into a
+                    little more detail about your company. Talk about your team
+                    and what services you provide. Tell your visitors the story
+                    of how you came up with the idea for your business and what
+                    makes you different from your competitors. Make your company
+                    stand out and show your visitors who you are.
+                  </h4>
+                  <br />
+                  <h4
+                    class="fs-5 fw-lighter pe-sm-5 me-sm-5 pt-sm-2 mt-sm-2 pb-sm-2 mb-sm-2"
+                  >
+                    At Inner Peace we’re passionate about making templates that allow
+                    you to build fabulous websites and it’s all thanks to the
+                    support and feedback from users like you! Keep up to date
+                    with New Releases and what’s Coming Soon in Inner Peace ellaneous in
+                    Support. Feel free to tell us what you think and give us
+                    feedback in the Inner Peace Forum. If you’d like to benefit from a
+                    professional designer’s touch, head to the Inner Peace Arena and
+                    connect with one of our Inner Peace Pro designers. Or if you need
+                    more help you can simply type your questions into the
+                    Support Forum and get instant answers. To keep up to date
+                    with everything Inner Peace, including tips and things we think are
+                    cool, just head to the Inner Peace Blog!
+                  </h4>
                 </div>
               </figure>
             </div>
@@ -115,7 +142,9 @@
         </div>
       </div>
       <!-- FOOTER -->
-      <footer class="text-center text-lg-start bg-secondary text-muted text-light footer">
+      <footer
+        class="text-center text-lg-start bg-secondary text-muted text-light footer"
+      >
         <!-- Section: Social media -->
         <section
           class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
@@ -209,7 +238,7 @@
               <!-- Grid column -->
 
               <!-- Grid column -->
-              <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 ">
+              <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                 <!-- Links -->
                 <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
                 <p><i class="fa fa-home me-3"></i> Calgary, AB</p>
@@ -233,9 +262,7 @@
           style="background-color: rgba(0, 0, 0, 0.05)"
         >
           © 2023 Copyright:
-          <a class="text-reset fw-bold" href="#"
-            >InnerPeaceBlog</a
-          >
+          <a class="text-reset fw-bold" href="#">InnerPeaceBlog</a>
         </div>
         <!-- Copyright -->
       </footer>
