--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                   short punchy sentences and entices your audience to continue
                   reading...
                 </p>
-                <a href="#" class="btn btn-outline-success">All Posts</a>
+                <a href="blogPosts.html" class="btn btn-outline-success" target="_blank">All Posts</a>
               </div>
             </div>
           </div>
@@ -392,7 +392,7 @@
                   </h4>
                 </div>
                 <div>
-                  <a href="#" class="btn btn-outline-success">Read more</a>
+                  <a href="about.html" class="btn btn-outline-success">Read more</a>
                 </div>
               </figure>
             </div>
