--- a/join.html
+++ b/join.html
@@ -44,7 +44,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto fs-5">
               <li class="nav-item mx-sm-5">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item mx-sm-5">
                 <a class="nav-link" href="blogPosts.html">Blog</a>
