--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                   </h4>
                 </div>
                 <div>
-                  <a href="about.html" class="btn btn-outline-success">Read more</a>
+                  <a href="about.html" class="btn btn-outline-success" target="_blank">Read more</a>
                 </div>
               </figure>
             </div>
