Read More on About section in homepage fixed

--- a/about.html
+++ b/about.html
@@ -127,11 +127,7 @@
                     support and feedback from users like you! Keep up to date
                     with New Releases and what’s Coming Soon in Inner Peace ellaneous in
                     Support. Feel free to tell us what you think and give us
-                    feedback in the Inner Peace Forum. If you’d like to benefit from a
-                    professional designer’s touch, head to the Inner Peace Arena and
-                    connect with one of our Inner Peace Pro designers. Or if you need
-                    more help you can simply type your questions into the
-                    Support Forum and get instant answers. To keep up to date
+                    feedback in the Inner Peace Forum. To keep up to date
                     with everything Inner Peace, including tips and things we think are
                     cool, just head to the Inner Peace Blog!
                   </h4>
