--- a/join.html
+++ b/join.html
@@ -25,7 +25,7 @@
         class="navbar navbar-expand-lg bg-body-tertiary sticky-top navbar-light"
       >
         <div class="container-sm ">
-          <a class="navbar-brand" href="#"
+          <a class="navbar-brand" href="index.html"
             ><h1 class="h1 display-3">Inner Peace</h1></a
           >
           <br />
@@ -103,7 +103,7 @@
             />
           </div>
           <div class="col-12 text-center">
-            <a href="#" class="btn btn-outline-success text-center">Submit</a>
+            <a href="index.html" class="btn btn-outline-success text-center">Submit</a>
           </div>
         </form>
       </div>
@@ -228,7 +228,7 @@
           style="background-color: rgba(0, 0, 0, 0.05)"
         >
           © 2023 Copyright:
-          <a class="text-reset fw-bold" href="#"
+          <a class="text-reset fw-bold" href="index.html"
             >InnerPeaceBlog</a
           >
         </div>
