--- a/about.html
+++ b/about.html
@@ -258,7 +258,7 @@
           style="background-color: rgba(0, 0, 0, 0.05)"
         >
           © 2023 Copyright:
-          <a class="text-reset fw-bold" href="#">InnerPeaceBlog</a>
+          <a class="text-reset fw-bold" href="index.html">InnerPeaceBlog</a>
         </div>
         <!-- Copyright -->
       </footer>
