--- a/blogPosts-7.html
+++ b/blogPosts-7.html
@@ -191,7 +191,7 @@
                     <br>
                     <div class="row">
                         <div class="col-sm" style="padding: 0; margin: 0;"">
-                            <a href="blogPosts.html-6" class="btn btn-outline-success">Previous Post</a>
+                            <a href="blogPosts-6.html" class="btn btn-outline-success">Previous Post</a>
                         </div>
                         <div class="col-sm text-sm-end" style="padding: 0; margin: 0;"">
                             <a href="blogPosts-7.html" class="btn btn-outline-success disabled">Next Post</a>
