--- a/blogPosts-3.html
+++ b/blogPosts-3.html
@@ -191,7 +191,7 @@
                     <br>
                     <div class="row">
                         <div class="col-sm" style="padding: 0; margin: 0;"">
-                            <a href="blogPosts-2.html" class="btn btn-outline-success disabled">Previous Post</a>
+                            <a href="blogPosts-2.html" class="btn btn-outline-success">Previous Post</a>
                         </div>
                         <div class="col-sm text-sm-end" style="padding: 0; margin: 0;"">
                             <a href="blogPosts-4.html" class="btn btn-outline-success">Next Post</a>
